--- a/doc/DokumenSkripsi/data.tex
+++ b/doc/DokumenSkripsi/data.tex
@@ -49,6 +49,7 @@
 \usepackage{verbatim} 		%multiline comment
 \usepackage{pgfplots}
 \usepackage{makecell}
+\usepackage{indentfirst}
 %\overfullrule=3mm % memperlihatkan overfull 
 %=============================================================================
 
