--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -1,5 +1,5 @@
 \chapter{Analisis}
-\section{Analisis Kebutuhan Perangkat Lunak \textit{Bluetape}}
+\section{Analisis Program Usulan \textit{Bluetape}}
 Pengerjaan untuk menganalisis \textit{bluetape} dilakukan dengan melakukan survei dengan pengguna--pengguna aplikasi tersebut. Survei dilakukan melalui \textit{google form} dan \textit{link} dari survei tersebut dibagikan melalui \textit{mailing list} dosen dan grup informatika UNPAR angkatan 2017. Pertanyaan pada survei tersebut cukup singkat. Pertanyaan hanya menanyakan nama dan tipe pengguna \textit{bluetape} dan disediakan suatu text field untuk memasukkan \textit{feedback} dari pengguna. Adapun \textit{feedback} yang telah terkumpulkan tersedia pada tabel \ref{tab:analisis pengguna}.
 
 \begin{table}[H]
@@ -46,7 +46,7 @@ Pada tabel \ref{tab:analisis pengguna} terdapat beberapa kolom yaitu:
 	Kolom status menjelaskan apakah \textit{feedback} tersebut akan dikerjakan atau tidak.
 \end{itemize}
 
-\subsection{Fitur "Expor ke XLS" pada Menu EntriJadwalDosen Menghasilkan File \\ \textit{Corrupt}}
+\subsection{Fitur "Expor ke XLS" pada Menu EntriJadwalDosen Menghasilkan File  \textit{Corrupt}}
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.3]{exporkexls} 
@@ -61,7 +61,7 @@ Fitur tersebut akan dikerjakan dan diperbaiki. Tetapi \textit{error} file \texti
 \subsection{\textit{Update google api/phpspreadsheet}}
 \textit{Bluetape} saat ini menggunakan \textit{google/apiclient} 1.0 dan \textit{phpexcel}. Salah satu permintaan dari pengguna/pengurus \textit{bluetape} untuk merubah \textit{google/apiclient} 1.0 menjadi \textit{google/apiclient} 2.4.0 dan \textit{phpexcel} menjadi \textit{phpspreadsheet} v1.11.0. 
 
-Fitur ini akan dikerjakan dan solusi yang ditawarkan untuk \textit{issue} ini adalah merubah \texttt{composer.json} dan melakukan \texttt{composer update}.
+Fitur ini akan dikerjakan dan solusi yang ditawarkan untuk \textit{issue} ini adalah merubah isi dari \texttt{composer.json} dan melakukan \texttt{composer update}.
 \label{sub:update google api}
 
 \subsection{Fitur \textit{chart} pada ManajemenCetakTranskrip}
@@ -72,9 +72,9 @@ Pada halaman \texttt{EntriJadwalDosen} dan \texttt{LihatJadwalDosen} terdapat ta
 
 Fitur ini akan diimplementasi. Solusi yang ditawarkan adalah dengan memasang \textit{fixed width} pada setiap kolom.
 
-\subsection{Fungsi tab pada LihatJadwalDosen tidak berfungsi}
+\subsection{Fungsi tab pada LihatJadwalDosen tidak Berfungsi}
 \subsection{Pengelompokkan Rekap Perubahan Jadwal pada Mata Kuliah yang Sama}
-\subsection{Menyediakan forum Q\&A pada \textit{bluetape}}
+\subsection{Menyediakan Forum Q\&A pada \textit{Bluetape}}
 \subsection{\textit{Scheduling} Matakuliah pada \textit{googlemeet/zoom}}
 \textit{Issue} ini meminta agar \textit{bluetape} melakukan \textit{auto include} jadwal kuliah ke calendar, lalu \textit{autocreate} jadwal kuliah berdasarkan jadwal tersebut di \textit{zoom/meet} selama 1 semester, dan \textit{Request} jadwal bertemu dari mahasiswa kepada dosen pembimbing, kemudian \textit{auto schedule zoom/meet}.
 
@@ -83,7 +83,7 @@ Fitur ini tidak akan diimplementasi pada skripsi ini, karena permintaan tersebut
 \subsection{Mengubah atau Membatalkan Permohonan}
 \subsection{Menambahkan Jam Kuliah Selesai di Perubahan Kelas}
 
-\subsection{Memperbaiki \textit{form} dan \textit{link} yang Tidak Aktif}
+\subsection{Memperbaiki \textit{Form} dan \textit{Link} yang Tidak Aktif}
 Masukan ini meminta perbaikan terhadap fitur yang ada: 
 \begin{itemize}
 	\item \textit{form} atau link seperti no surat, daftar ruang, dan peraturan terus diupdate.
@@ -93,16 +93,36 @@ Masukan ini meminta perbaikan terhadap fitur yang ada:
 
 Masukan ini tidak akan diimplementasi, karena sepertinya fitur tersebut di luar sistem \textit{bluetape}. Seperti no surat, daftar ruang, dan peraturan.
 
-\subsection{Mengintegrasi \textit{bluetape} dengan SSO UNPAR}
+\subsection{Mengintegrasi \textit{Bluetape} dengan SSO UNPAR}
 Masukan ini meminta fitur tambahan agar \textit{bluetape} terintegrasi secara penuh dengan \textit{studentportal}\footnote{\url{https://studentportal.unpar.ac.id/}}. Sehingga \textit{bluetape} dapat diakses lewat \textit{studentportal} dan \textit{bluetape} dapat \textit{login} menggunakan SSO.
 
 Fitur masukan ini tidak akan diimplementasi karena diperlukan koordinasi yang kuat dengan BTI dan \textit{Bluetape} untuk sementara ini tidak diperuntukan untuk pengguna diluar FTIS.
 
-\subsection{Menambah \textit{list} Permintaan pada \textit{Bluetape}}
+\subsection{Menambah \textit{List} Permintaan pada \textit{Bluetape}}
 Masukan ini meminta agar \textit{bluetape} menambah \textit{list} permintaan. Masukan ini tidak dikerjakan karena pengguna tersebut kurang spesifik dalam menjelaskan kebutuhannya.
 
-\subsection{Pengajuan surat keterangan aktif kuliah secara online}
-\subsection{Dapat melihat profil }
+\subsection{Pengajuan Surat Keterangan Aktif Kuliah Secara Online}
+
+Fitur tambahan ini meminta agar \textit{bluetape} dapat melayani pengajuan surat keterangan aktif kuliah. Karena untuk mendapatkan surat keterangan aktif kuliah masih dilakukan secara manual.
+
+Fitur ini tidak akan diimplementasi pada skripsi ini dikarenakan waktu yang terbatas, fitur yang cukup banyak, dan juga harus koordinasi intensif dengan tata usaha dan kepala sub bagian kemahasiswaan.
+
+\subsection{Notifikasi E-mail Terhadap Mahasiswa saat Permintaan Selesai}
+Fitur tambahan ini meminta saat proses pengajuan telah dijawab atau ditolak oleh tata usaha, maka mahasiswa mendapatkan notifikasi e-mail.
+ 
+
+\subsection{Dapat Melihat Profil Mahasiswa}
+Salah satu masukan dari \textit{bluetape} adalah menginginkan seorang mahasiswa dapat melihat profil mahasiswa lain.
+
+Fitur ini tidak diimplementasi pada skripsi ini karena untuk saat ini \textit{bluetape} tidak terintegrasi dengan \textit{student/lecturer} portal.
+
+\subsection{Halaman Histori dan Request Transkrip Terpisah}
+\subsection{Fitur Bahasa Indonesia dan Inggris}
+Permintaan dari pengguna adalah fitur bahasa Indonesia dan bahasa Inggris. Setelah ditanyakan kejelasan dari permintaan ini, yang dimaksudkan pengguna adalah ``Jika dibutuhkan untuk transkrip nilai dalam bahasa Inggris, dulu ada pilihannya tetapi hasil transkrip tetap bahasa Indonesia''.
+
+Fitur ini tidak diimplementasi karena fitur transkrip nilai dalam bahasa Inggris diminta untuk dihapus oleh tata usaha.
+\subsection{Pagination tidak Ter-\textit{style} dengan baik}
+\subsection{Format Datetimepicker tidak Konsisten}
 
 \section{Bluetape}
 
