--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -705,6 +705,8 @@ Kelas \texttt{col-form-label} digunakan pada \textit{tag} \texttt{<label>} jika 
 	\end{lstlisting}
 \end{itemize}
 
+\section{JQuery}
+
 
 
  
