--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -1,3 +1,16 @@
+\lstset{
+	language=php,
+	columns=fullflexible,
+	showspaces=false,	
+	showstringspaces=false,		
+	breaklines=true,
+	showlines=true, frame=single,
+	tabsize=4,  
+	basicstyle=\fontfamily{fvm}\selectfont, 
+	commentstyle=\itshape\color{gray}, keywordstyle=\bfseries\color{blue}, 
+	identifierstyle=\color{black}, stringstyle=\color{orange}	
+}
+
 \chapter{Analisis}
 \section{Analisis Program Usulan \textit{Bluetape}}
 Pengerjaan untuk menganalisis \textit{bluetape} dilakukan dengan melakukan survei dengan pengguna--pengguna aplikasi tersebut. Survei dilakukan melalui \textit{google form} dan \textit{link} dari survei tersebut dibagikan melalui \textit{mailing list} dosen dan grup informatika UNPAR angkatan 2017. Pertanyaan pada survei tersebut cukup singkat. Pertanyaan hanya menanyakan nama dan tipe pengguna \textit{bluetape} dan disediakan suatu text field untuk memasukkan \textit{feedback} dari pengguna. Adapun \textit{feedback} yang telah terkumpulkan tersedia pada tabel \ref{tab:analisis pengguna}.
@@ -6,47 +19,43 @@ Pengerjaan untuk menganalisis \textit{bluetape} dilakukan dengan melakukan surve
 	\centering
 	\label{tab:analisis pengguna}
 	\resizebox{\textwidth}{!}{
-	\begin{tabular}{|l|l|l|l|}
+	\begin{tabular}{|l|l|l|l|l|}
 	\hline
-	No & Deskripsi & \textit{Issue Number}  & Status \\ \hline
-	1 & \makecell[l]{Fitur "Expor ke XLS" pada menu \\ EntriJadwalDosen  menghasilkan file \textit{corrupt}} & \#1  & Akan diimplementasi\\ \hline
-	2 & \textit{Update google api / phpspreadsheet}  & \#2  & Akan diimplementasi \\ \hline
-	3 & Fitur \textit{chart} pada ManajemenCetakTranskrip & \#3  & Akan diimplementasi\\ \hline
-	4 & Fitur \textit{chart} pada ManajemenPerubahanKuliah & \#4  & Akan diimplementasi\\ \hline
-	5 & \makecell[l]{Mahasiswa dengan NPM baru \\ tidak dapat login dan LihatJadwalDosen} & \#5  & Akan diimplementasi\\ \hline
-	6 & \makecell[l]{Kolom pada EntriJadwalDosen dan \\ LihatJadwalDosen tidak seragam}  & \#6 & Akan diimplementasi\\ \hline
-	7 & Fungsi Tab pada LihatJadwalDosen tidak berfungsi & \#7 & Akan diimplementasi\\ \hline
-	8 & \makecell[l]{Pengelompokkan rekap perubahan jadwal\\ pada mata kuliah yang sama} & \#8 & \\ \hline
-	9 & Menyediakan forum Q\&A pada \textit{bluetape} & \#9 & \\ \hline
-	10 & \textit{Scheduling} matakuliah pada googlemeet/zoom & \#10 & Tidak diimplementasi\\ \hline
-	11 & Mengubah atau membatalkan permohonan & \#11 & Akan diimplementasi\\ \hline
-	12 & Menambahkan jam kuliah selesai di perubahan kelas & \#12 & Akan diimplementasi\\ \hline
-	13 & Memperbaiki form dan link yang tidak aktif & \#13 & Tidak diimplementasi\\ \hline
-	14 & Mengintegrasi \textit{bluetape} dengan SSO UNPAR & \#14 & Tidak diimplementasi\\ \hline
-	15 & Menambah list permintaan pada \textit{bluetape} & \#15 & Tidak diimplementasi\\ \hline
-	16 & Pengajuan surat keterangan aktif kuliah secara online & \#16 & \\ \hline
-	17 & \makecell[l]{Notifikasi email untuk mahasiswa \\ jika permintaan sudah diselesaikan} & \#17 & Akan diimplementasi\\ \hline
-	18 & Dapat melihat profil mahasiswa & \#18 & Tidak diimplementasi\\ \hline
-	19 & Halaman histori dan request transkrip terpisah & \#19 & \\ \hline
-	20 & Fitur bahasa indonesia dan inggris & \#20 & \\ \hline
-	21 & Pagination tidak terstyle dengan baik & \#22 & Akan diimplementasi\\ \hline
-	22 & Format Datetimepicker tidak konsisten &\#23 & Akan diimplementasi\\ \hline
+	No & Deskripsi & \textit{Issue Number}  & Status & Analisis \\ \hline
+	1 & \makecell[l]{Fitur "Expor ke XLS" pada menu \\ EntriJadwalDosen  menghasilkan file \textit{corrupt}} & \#1  & Akan diimplementasi & \ref{issue:1}\\ \hline
+	2 & \textit{Update google api / phpspreadsheet}  & \#2  & Akan diimplementasi & \ref{issue:2}\\ \hline
+	3 & Fitur \textit{chart} pada ManajemenCetakTranskrip & \#3  & Akan diimplementasi & \ref{issue:3} \\ \hline
+	4 & Fitur \textit{chart} pada ManajemenPerubahanKuliah & \#4  & Akan diimplementasi & \ref{issue:4}\\ \hline
+	5 & \makecell[l]{Mahasiswa dengan NPM baru \\ tidak dapat login dan LihatJadwalDosen} & \#5  & Akan diimplementasi & \ref{issue:5}\\ \hline
+	6 & \makecell[l]{Kolom pada EntriJadwalDosen dan \\ LihatJadwalDosen tidak seragam}  & \#6 & Akan diimplementasi &\ref{issue:6} \\ \hline
+	7 & Fungsi Tab pada LihatJadwalDosen tidak berfungsi & \#7 & Akan diimplementasi & \ref{issue:7}\\ \hline
+	8 & \makecell[l]{Pengelompokkan rekap perubahan jadwal\\ pada mata kuliah yang sama} & \#8 & & \ref{issue:8}\\ \hline
+	9 & Menyediakan forum Q\&A pada \textit{bluetape} & \#9 & & \ref{issue:9}\\ \hline
+	10 & \textit{Scheduling} matakuliah pada googlemeet/zoom & \#10 & Tidak diimplementasi & \ref{issue:10} \\ \hline
+	11 & Mengubah atau membatalkan permohonan & \#11 & Akan diimplementasi & \ref{issue:11} \\ \hline
+	12 & Menambahkan jam kuliah selesai di perubahan kelas & \#12 & Akan diimplementasi & \ref{issue:12} \\ \hline
+	13 & Memperbaiki form dan link yang tidak aktif & \#13 & Tidak diimplementasi & \ref{issue:13}\\ \hline
+	14 & Mengintegrasi \textit{bluetape} dengan SSO UNPAR & \#14 & Tidak diimplementasi & \ref{issue:14}\\ \hline
+	15 & Menambah list permintaan pada \textit{bluetape} & \#15 & Tidak diimplementasi & \ref{issue:15} \\ \hline
+	16 & Pengajuan surat keterangan aktif kuliah secara online & \#16 & & \ref{issue:16} \\ \hline
+	17 & \makecell[l]{Notifikasi email untuk mahasiswa \\ jika permintaan sudah diselesaikan} & \#17 & Akan diimplementasi &  \ref{issue:17}\\ \hline
+	18 & Dapat melihat profil mahasiswa & \#18 & Tidak diimplementasi & \ref{issue:18}\\ \hline
+	19 & Halaman histori dan request transkrip terpisah & \#19 & & \ref{issue:19}\\ \hline
+	20 & Fitur bahasa indonesia dan inggris & \#20 & & \ref{issue:20} \\ \hline
+	21 & Pagination tidak terstyle dengan baik & \#22 & Akan diimplementasi & \ref{issue:22}\\ \hline
+	22 & Format Datetimepicker tidak konsisten &\#23 & Akan diimplementasi & \ref{issue:23}\\ \hline
 	
 	
 	\end{tabular}}
-	\caption{Tabel analsis kebutuhan pengguna perangkat \textit{bluetape}}
+	\caption{Tabel analisis kebutuhan pengguna perangkat \textit{bluetape}}
 \end{table}
 
-Pada tabel \ref{tab:analisis pengguna} terdapat beberapa kolom yaitu:
-\begin{itemize}
-	\item Deskripsi \\
-	Deskripsi adalah judul dari \textit{issue} yang berasal dari \textit{github}.
-	\item \textit{Issue Number} \\ \textit{Issue number} adalah nomor \textit{issue} yang berasal dari \textit{github}. \textit{Issue number} yang dibuat adalah berdasarkan \textit{issue number} pada \textit{repository} yang telah di \textit{fork}.
-	\item Status \\
-	Kolom status menjelaskan apakah \textit{feedback} tersebut akan dikerjakan atau tidak.
-\end{itemize}
+
+\textit{feedback} dari pengguna Pada tabel \ref{tab:analisis pengguna} selanjutnya dibuat menjadi \textit{issues} pada \textit{github}\footnote{\url{https://github.com/stephenhadi/BlueTape/issues}}. \textit{Feedback} dari pengguna selanjutnya akan dianalisa apakah akan diimplementasi berdasarkan jumlah fitur yang dibutuhkan dan waktu pengerjaan.
+
 
 \subsection{Fitur "Expor ke XLS" pada Menu EntriJadwalDosen Menghasilkan File  \textit{Corrupt}}
+\label{issue:1}
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.3]{exporkexls} 
@@ -56,34 +65,52 @@ Pada tabel \ref{tab:analisis pengguna} terdapat beberapa kolom yaitu:
 
 Fitur ini terdapat pada halaman \texttt{EntriJadwalDosen} yang dapat digunakan untuk memasukan atau merubah jadwal dosen. Dapat dilihat pada gambar \ref{fig:EntriJadwalDosen} terdapat sebuah fitur untuk melakukan \textit{expor ke xls}. Dari laporan pengguna fitur tersebut akan menghasilkan file \texttt{.xls} yang \textit{corrupt}. 
 
-Fitur tersebut akan dikerjakan dan diperbaiki. Tetapi \textit{error} file \textit{corrupt} tidak dapat direproduksi setelah melakukan \textit{update} pada \ref{sub:update google api} dan melakukan perubahan dari \textit{phpexcel} menjadi \textit{phpspreadsheet}. 
+Fitur tersebut akan dikerjakan. Tetapi \textit{error} file \textit{corrupt} tidak dapat direproduksi.
 
 \subsection{\textit{Update google api/phpspreadsheet}}
+\label{issue:2}
 \textit{Bluetape} saat ini menggunakan \textit{google/apiclient} 1.0 dan \textit{phpexcel}. Salah satu permintaan dari pengguna/pengurus \textit{bluetape} untuk merubah \textit{google/apiclient} 1.0 menjadi \textit{google/apiclient} 2.4.0 dan \textit{phpexcel} menjadi \textit{phpspreadsheet} v1.11.0. 
 
-Fitur ini akan dikerjakan dan solusi yang ditawarkan untuk \textit{issue} ini adalah merubah isi dari \texttt{composer.json} dan melakukan \texttt{composer update}.
-\label{sub:update google api}
+Fitur ini akan dikerjakan dan solusi yang ditawarkan untuk \textit{issue} ini adalah merubah isi \texttt{composer.json} dan melakukan \texttt{composer update}.
+\begin{lstlisting}
+"require": {
+	"google/apiclient": "^2.4.0",
+	"phpoffice/phpspreadsheet": "^v1.11.0"
+}
+\end{lstlisting}
 
 \subsection{Fitur \textit{chart} pada ManajemenCetakTranskrip}
+\label{issue:3}
+
 \subsection{Fitur \textit{chart} pada ManajemenPerubahanKuliah}
+\label{issue:4}
 \subsection{Mahasiswa dengan NPM Baru Tidak Dapat \textit{Login} dan LihatJadwalDosen}
-\subsection{Kolom pada EntriJadwalDosen dan LihatJadwalDosen Tidak Seragam} 
+\label{issue:5}
+\subsection{Kolom pada EntriJadwalDosen dan LihatJadwalDosen Tidak Seragam}
+\label{issue:6} 
 Pada halaman \texttt{EntriJadwalDosen} dan \texttt{LihatJadwalDosen} terdapat tabel seperti pada gambar \ref{fig:EntriJadwalDosen}. Ukuran tabel tersebut dapat berubah sesuai dengan ukuran tulisan di dalamnya sehingga kolom dengan tulisan yang banyak tidak seragam dengan kolom yang tulisannya sedikit.
 
 Fitur ini akan diimplementasi. Solusi yang ditawarkan adalah dengan memasang \textit{fixed width} pada setiap kolom.
 
 \subsection{Fungsi tab pada LihatJadwalDosen tidak Berfungsi}
+\label{issue:7}
 \subsection{Pengelompokkan Rekap Perubahan Jadwal pada Mata Kuliah yang Sama}
+\label{issue:8}
 \subsection{Menyediakan Forum Q\&A pada \textit{Bluetape}}
+\label{issue:9}
 \subsection{\textit{Scheduling} Matakuliah pada \textit{googlemeet/zoom}}
+\label{issue:10}
 \textit{Issue} ini meminta agar \textit{bluetape} melakukan \textit{auto include} jadwal kuliah ke calendar, lalu \textit{autocreate} jadwal kuliah berdasarkan jadwal tersebut di \textit{zoom/meet} selama 1 semester, dan \textit{Request} jadwal bertemu dari mahasiswa kepada dosen pembimbing, kemudian \textit{auto schedule zoom/meet}.
 
 Fitur ini tidak akan diimplementasi pada skripsi ini, karena permintaan tersebut masuk ke dalam ranah Biro Teknologi Informasi (BTI) dan saat ini \textit{bluetape} tidak memiliki kemampuan untuk integrasi jadwal kuliah dari BTI.
 
 \subsection{Mengubah atau Membatalkan Permohonan}
+\label{issue:11}
 \subsection{Menambahkan Jam Kuliah Selesai di Perubahan Kelas}
+\label{issue:12}
 
 \subsection{Memperbaiki \textit{Form} dan \textit{Link} yang Tidak Aktif}
+\label{issue:13}
 Masukan ini meminta perbaikan terhadap fitur yang ada: 
 \begin{itemize}
 	\item \textit{form} atau link seperti no surat, daftar ruang, dan peraturan terus diupdate.
@@ -94,35 +121,44 @@ Masukan ini meminta perbaikan terhadap fitur yang ada:
 Masukan ini tidak akan diimplementasi, karena sepertinya fitur tersebut di luar sistem \textit{bluetape}. Seperti no surat, daftar ruang, dan peraturan.
 
 \subsection{Mengintegrasi \textit{Bluetape} dengan SSO UNPAR}
+\label{issue:14}
 Masukan ini meminta fitur tambahan agar \textit{bluetape} terintegrasi secara penuh dengan \textit{studentportal}\footnote{\url{https://studentportal.unpar.ac.id/}}. Sehingga \textit{bluetape} dapat diakses lewat \textit{studentportal} dan \textit{bluetape} dapat \textit{login} menggunakan SSO.
 
 Fitur masukan ini tidak akan diimplementasi karena diperlukan koordinasi yang kuat dengan BTI dan \textit{Bluetape} untuk sementara ini tidak diperuntukan untuk pengguna diluar FTIS.
 
 \subsection{Menambah \textit{List} Permintaan pada \textit{Bluetape}}
+\label{issue:15}
 Masukan ini meminta agar \textit{bluetape} menambah \textit{list} permintaan. Masukan ini tidak dikerjakan karena pengguna tersebut kurang spesifik dalam menjelaskan kebutuhannya.
 
 \subsection{Pengajuan Surat Keterangan Aktif Kuliah Secara Online}
-
+\label{issue:16}
 Fitur tambahan ini meminta agar \textit{bluetape} dapat melayani pengajuan surat keterangan aktif kuliah. Karena untuk mendapatkan surat keterangan aktif kuliah masih dilakukan secara manual.
 
 Fitur ini tidak akan diimplementasi pada skripsi ini dikarenakan waktu yang terbatas, fitur yang cukup banyak, dan juga harus koordinasi intensif dengan tata usaha dan kepala sub bagian kemahasiswaan.
 
 \subsection{Notifikasi E-mail Terhadap Mahasiswa saat Permintaan Selesai}
+\label{issue:17}
 Fitur tambahan ini meminta saat proses pengajuan telah dijawab atau ditolak oleh tata usaha, maka mahasiswa mendapatkan notifikasi e-mail.
  
 
 \subsection{Dapat Melihat Profil Mahasiswa}
+
+\label{issue:18}
 Salah satu masukan dari \textit{bluetape} adalah menginginkan seorang mahasiswa dapat melihat profil mahasiswa lain.
 
 Fitur ini tidak diimplementasi pada skripsi ini karena untuk saat ini \textit{bluetape} tidak terintegrasi dengan \textit{student/lecturer} portal.
 
 \subsection{Halaman Histori dan Request Transkrip Terpisah}
+\label{issue:19}
 \subsection{Fitur Bahasa Indonesia dan Inggris}
+\label{issue:20}
 Permintaan dari pengguna adalah fitur bahasa Indonesia dan bahasa Inggris. Setelah ditanyakan kejelasan dari permintaan ini, yang dimaksudkan pengguna adalah ``Jika dibutuhkan untuk transkrip nilai dalam bahasa Inggris, dulu ada pilihannya tetapi hasil transkrip tetap bahasa Indonesia''.
 
 Fitur ini tidak diimplementasi karena fitur transkrip nilai dalam bahasa Inggris diminta untuk dihapus oleh tata usaha.
 \subsection{Pagination tidak Ter-\textit{style} dengan baik}
+\label{issue:22}
 \subsection{Format Datetimepicker tidak Konsisten}
+\label{issue:23}
 
 \section{Bluetape}
 
