--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -714,7 +714,10 @@ Kelas \texttt{col-form-label} digunakan pada \textit{tag} \texttt{<label>} jika 
 	Kelas \texttt{tab-pane} berada di dalam kelas \texttt{tab-content} yang membungkus isi konten. 
 	
 	\item \texttt{data-toggle} \\ 
-	Atribut \texttt{data-toggle} dipasang dengan nilai \texttt{data-toggle=``tab''} agar navigasi dapat diklik dan melakukan navigasi.
+	Atribut \texttt{data-toggle} dipasang dengan nilai \texttt{data-toggle=``tab''} agar navigasi dapat diklik untuk melakukan navigasi. Atribut ini ditaruh pada \textit{tag} \texttt{<a>} seperti:
+	\begin{lstlisting}
+<a class="nav-link" data-toggle="tab"></a>
+	\end{lstlisting}
 	
 	\item \texttt{nav-item} \\
 	Kelas ini digunakan pada \textit{item} dari navigasi. Contoh penggunaan:
@@ -728,28 +731,12 @@ Kelas \texttt{col-form-label} digunakan pada \textit{tag} \texttt{<label>} jika 
 <a class="nav-link">link</a>	
 	\end{lstlisting}
 \end{itemize}
-Struktur penggunaan kelas-kelas pada \textit{nav} secara dasar:
-\begin{lstlisting}
-<ul class="nav nav-tabs">
-	<li class="nav-item">
-		<a class="nav-link active" href="#" >Home</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link"  href="#">Profile</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link"   href="#">Contact</a>
-	</li>
-</ul>
-<div class="tab-content">
-	<div class="tab-pane">...</div>
-	<div class="tab-pane">...</div>
-	<div class="tab-pane">...</div>
-</div>
-\end{lstlisting}
-Penambahan atribut \texttt{data-toggle=``tab''} pada \textit{tag} \texttt{<a>}, memungkinkan navigasi dapat diklik. Kode diatas akan menghasilkan navigasi pada gambar \ref{fig:nav-tabs}.
+
+\subsection{Collapse}
+\subsection{Cards}
 
 \section{JQuery}
+\section{Chart}
 
 
 
